
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_int ;
struct format_tree {int dummy; } ;
struct format_modifier {int dummy; } ;


 int format_add_modifier (struct format_modifier**,int *,char const*,int,char**,int) ;
 char* format_expand (struct format_tree*,char*) ;
 int format_free_modifiers (struct format_modifier*,int ) ;
 scalar_t__ format_is_end (char const) ;
 char* format_skip (char const*,char*) ;
 int free (char*) ;
 int ispunct (char const) ;
 scalar_t__ memcmp (char*,char const*,int) ;
 int * strchr (char*,char const) ;
 char** xcalloc (int,int) ;
 char** xreallocarray (char**,int,int) ;
 char* xstrndup (char const*,int) ;

__attribute__((used)) static struct format_modifier *
format_build_modifiers(struct format_tree *ft, const char **s, u_int *count)
{
 const char *cp = *s, *end;
 struct format_modifier *list = ((void*)0);
 char c, last[] = "X;:", **argv, *value;
 int argc;
 *count = 0;

 while (*cp != '\0' && *cp != ':') {

  if (*cp == ';')
   cp++;


  if (strchr("lbdtqETSWP<>", cp[0]) != ((void*)0) &&
      format_is_end(cp[1])) {
   format_add_modifier(&list, count, cp, 1, ((void*)0), 0);
   cp++;
   continue;
  }


  if ((memcmp("||", cp, 2) == 0 ||
      memcmp("&&", cp, 2) == 0 ||
      memcmp("!=", cp, 2) == 0 ||
      memcmp("==", cp, 2) == 0 ||
      memcmp("<=", cp, 2) == 0 ||
      memcmp(">=", cp, 2) == 0) &&
      format_is_end(cp[2])) {
   format_add_modifier(&list, count, cp, 2, ((void*)0), 0);
   cp += 2;
   continue;
  }


  if (strchr("mCs=", cp[0]) == ((void*)0))
   break;
  c = cp[0];


  if (format_is_end(cp[1])) {
   format_add_modifier(&list, count, cp, 1, ((void*)0), 0);
   cp++;
   continue;
  }
  argv = ((void*)0);
  argc = 0;


  if (!ispunct(cp[1]) || cp[1] == '-') {
   end = format_skip(cp + 1, ":;");
   if (end == ((void*)0))
    break;

   argv = xcalloc(1, sizeof *argv);
   value = xstrndup(cp + 1, end - (cp + 1));
   argv[0] = format_expand(ft, value);
   free(value);
   argc = 1;

   format_add_modifier(&list, count, &c, 1, argv, argc);
   cp = end;
   continue;
  }


  last[0] = cp[1];
  cp++;
  do {
   if (cp[0] == last[0] && format_is_end(cp[1])) {
    cp++;
    break;
   }
   end = format_skip(cp + 1, last);
   if (end == ((void*)0))
    break;
   cp++;

   argv = xreallocarray (argv, argc + 1, sizeof *argv);
   value = xstrndup(cp, end - cp);
   argv[argc++] = format_expand(ft, value);
   free(value);

   cp = end;
  } while (!format_is_end(cp[0]));
  format_add_modifier(&list, count, &c, 1, argv, argc);
 }
 if (*cp != ':') {
  format_free_modifiers(list, *count);
  *count = 0;
  return (((void*)0));
 }
 *s = cp + 1;
 return list;
}
